--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="app_name">Cocinando tu Equipo</string>
+    <string name="title_activity_main2">Cocinando tu Equipo</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -17,5 +17,6 @@
         <item>Android 6.0</item>
         <item>Android 7.0</item>
         <item>Android 8.0</item>
+        <item>IOS</item>
     </string-array>
 </resources>
